RESOLVED FIXED201972
[LFC][IFC] InlineFormattingContext::InlineLayout should not need to call LayoutState::establishedFormattingState
https://bugs.webkit.org/show_bug.cgi?id=201972
Summary [LFC][IFC] InlineFormattingContext::InlineLayout should not need to call Layo...
alan
Reported 2019-09-18 21:17:00 PDT
when it has access to InlineFormattingContext object.
Attachments
Patch (6.40 KB, patch)
2019-09-18 21:19 PDT, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-09-18 21:18:17 PDT
alan
Comment 2 2019-09-18 21:19:22 PDT
alan
Comment 3 2019-09-19 07:58:50 PDT
Note You need to log in before you can comment on or make changes to this bug.